Support new readable password format. Fix copy & paste into recovery and owner fields.

--- a/passmate.css
+++ b/passmate.css
@@ -106,6 +106,10 @@ overview ol > li {
 	margin-bottom: 1em;
 }
 
+overview .selected {
+	font-weight: 600;
+}
+
 /**********
  * Print
  **********/
